--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   sign_in_button: ^3.2.0
   syncfusion_flutter_calendar: ^25.1.35
   flutter_rating_bar: ^4.0.0
+  firebase_core: ^2.31.0
+  firebase_storage: ^11.7.5
+  firebase_auth: ^4.19.5
+  cloud_firestore: ^4.17.3
+  fluttertoast: ^8.2.5
+
 
 
 
